Fixes for pattern tests #14

--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,4 +1,4 @@
-db-uri = "postgres://haf_admin@localhost:5432/haf_block_log"
+db-uri = "postgres://haf_admin:haf_admin@localhost:5432/haf_block_log"
 db-schema = "hafah_api"
 db-anon-role = "hafah_user"
 db-root-spec = "home"
