--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ hived:
   tags:
     - public-runner-docker
 
-patterns_tests:
+patterns_tests_py:
   stage: build_and_test
   needs:
     - job: hive_fork_manager
@@ -79,6 +79,52 @@ patterns_tests:
     # run comparsion tests
     - export AHRB_PORT=$(cat $CI_PROJECT_DIR/tests/prepare_database/config.ini | grep webserver-http-endpoint | cut -d ':' -f 2)
     - export TJOBS=10
+    - cd $CI_PROJECT_DIR/haf/hive/tests/tests_api/hived
+    - ./test_ah_enum_virtual_ops.py --ref http://localhost:$AHRB_PORT --test http://$AH_ENDPOINT --start 4900000 --stop 4925000 -d workdir_enum -j $TJOBS
+    - ./test_ah_get_ops_in_block.py --ref http://localhost:$AHRB_PORT --test http://$AH_ENDPOINT --start 4900000 --stop 4925000 -d workdir_ops -j $TJOBS
+    - ./test_ah_get_account_history.py --ref http://localhost:$AHRB_PORT --test http://$AH_ENDPOINT -f ./input_data/accounts.csv -d workdir_acc -j $TJOBS
+    - ./test_ah_get_transaction.py --ref http://localhost:$AHRB_PORT --test http://$AH_ENDPOINT -f ./input_data/hashes.csv -d workdir_trx -j $TJOBS
+
+  artifacts:
+    when: always
+    reports:
+      junit: $CI_PROJECT_DIR/haf/hive/tests/api_tests/results.xml
+    paths:
+    - "$CI_JOB_NAME"
+    - "**/from_node.log"
+    - "**/ah.log"
+    - "**/*.out.json"
+    - "$CI_PROJECT_DIR/haf/hive/tests/tests_api/hived/workdir_*"
+    when: always
+    expire_in: 6 hours
+  tags:
+    - public-runner-docker
+    - hived-for-tests
+
+patterns_tests_postgrest:
+  stage: build_and_test
+  needs:
+    - job: hive_fork_manager
+      artifacts: true
+    - job: hived
+      artifacts: true
+  image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
+  variables:
+    HIVE_BUILD_ROOT_PATH: "$CI_PROJECT_DIR/hived/build/hive"
+    BLOCK_LOG_PATH: "/blockchain/block_log"
+
+    # install dependancies
+    - ./run.sh install-dependancies
+
+    # run HAfAH
+    - ./run.sh re-all-start
+
+    # run pattern tests
+    - cd $CI_PROJECT_DIR/haf/hive/tests/api_tests
+    - export AH_ENDPOINT=localhost:3000
+    - ./run_tests.sh $AH_ENDPOINT `git rev-parse --show-toplevel`
+
+    # run comparsion tests
     - cd $CI_PROJECT_DIR/haf/hive/tests/tests_api/hived
     - ./test_ah_enum_virtual_ops.py --ref http://localhost:$AHRB_PORT --test http://$AH_ENDPOINT --start 4900000 --stop 4925000 -d workdir_enum -j $TJOBS
     - ./test_ah_get_ops_in_block.py --ref http://localhost:$AHRB_PORT --test http://$AH_ENDPOINT --start 4900000 --stop 4925000 -d workdir_ops -j $TJOBS
