--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,62 +8,27 @@ variables:
   BUILDER_IMAGE_TAG: "@sha256:a701abca3cdd31bc3a5c7e58a8a2a9ea752e7f30e100aa41bcfe9c56b777883f"
   SETUP_SCRIPTS_PATH: "$CI_PROJECT_DIR/haf/scripts"
 
-hive_fork_manager:
-  stage: build_and_test
-  image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
-  script:
-    - $SETUP_SCRIPTS_PATH/build.sh --cmake-arg="-DHIVE_LINT=ON" --haf-source-dir="$CI_PROJECT_DIR/haf" --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build" extension.hive_fork_manager
-    - sudo $SETUP_SCRIPTS_PATH/setup_postgres.sh --haf-admin-account=haf_admin --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build"
-    - cd "$CI_PROJECT_DIR/$CI_JOB_NAME/build" && ctest --output-on-failure  -R test.functional.hive_fork_manager.*
-  artifacts:
-    paths:
-    - "$CI_JOB_NAME"
-    expire_in: 6 hours
-  tags:
-    - public-runner-docker
+include:
+  - project: 'hive/haf'
+    ref: bw_dockerized_haf_setup
+    file: '/scripts/ci-helpers/prepare_data_image_job.yml'
 
-# job resonsible for hived build in mainnet config.
-hived:
+prepare_haf_instance:
+  extends: .prepare_haf_data_5m_image
   stage: build_and_test
-  image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
-  script:
-    - $SETUP_SCRIPTS_PATH/build.sh --cmake-arg="-DHIVE_LINT=ON" --haf-source-dir="$CI_PROJECT_DIR/haf" --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build" hived truncate_block_log
-    # check if sql_serializer compiles with hived
-    - test -f "$CI_PROJECT_DIR/$CI_JOB_NAME/build/hive/libraries/plugins/sql_serializer/libsql_serializer_plugin.a"
-    # check if sql_serializer plugin is included in hived plugins
-    - cd "$CI_PROJECT_DIR/$CI_JOB_NAME/build/hive/programs/hived"
-    - ./hived --help | grep psql-url
-  artifacts:
-    paths:
-    - "$CI_JOB_NAME"
-    expire_in: 6 hours
   tags:
     - public-runner-docker
+    - hived-for-tests
 
 patterns_tests:
   stage: build_and_test
   needs:
-    - job: hive_fork_manager
-      artifacts: true
-    - job: hived
-      artifacts: true
+    - job: prepare_haf_instance
   image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
-  variables:
-    HIVE_BUILD_ROOT_PATH: "$CI_PROJECT_DIR/hived/build/hive"
-    BLOCK_LOG_PATH: "/blockchain/block_log"
   script:
     - pip3 install -r requirements.txt
+    - ./haf/scripts/run_hived_img.sh registry.gitlab.syncad.com/hive/haf/data:31dd6c9084fc63013f44425c9d39a1f2a20d66f4
 
-    # install hive_fork_manager extension built in previous stage
-    # replay and prepare database
-    - if [ ! "$POSTGRESQL_URI" ] && [ ! "$AH_ENDPOINT" ]; then
-        sudo $SETUP_SCRIPTS_PATH/setup_postgres.sh --haf-admin-account=haf_admin --haf-binaries-dir="$CI_PROJECT_DIR/hive_fork_manager/build" ;
-        $SETUP_SCRIPTS_PATH/setup_db.sh --haf-db-name="haf_block_log" --haf-db-owner="hive" ;
-        mkdir $CI_PROJECT_DIR/tests/prepare_database/blockchain ;
-        $HIVE_BUILD_ROOT_PATH/programs/util/truncate_block_log $BLOCK_LOG_PATH $CI_PROJECT_DIR/tests/prepare_database/blockchain/block_log 5000000 ;
-        ($HIVE_BUILD_ROOT_PATH/programs/hived/hived --data-dir $CI_PROJECT_DIR/tests/prepare_database --config config.ini --force-replay --stop-replay-at 5000000 2>&1 | tee -i $CI_PROJECT_DIR/from_node.log &) | grep -q "Entering application main loop";
-        export POSTGRESQL_URI='postgresql:///haf_block_log' ;
-      fi
 
     # run HAfAH
     - if [ ! "$AH_ENDPOINT" ]; then
