HafAH CI uses HAF and HafAH instances as services created by gitlab.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,10 @@ variables:
   # uses registry.gitlab.syncad.com/hive/haf/ci-base-image:ubuntu20.04-5 
   BUILDER_IMAGE_TAG: "@sha256:a22b174d15ad9878f878e798e297d2134da132174802abff0923ea214e2f4543"
   SETUP_SCRIPTS_PATH: "$CI_PROJECT_DIR/haf/scripts"
+  REGISTRY: registry.gitlab.syncad.com/hive/hafah
+  HAFAH_IMAGE: $REGISTRY/instance:$CI_COMMIT_SHORT_SHA
+  HAFAH_PORT: 6543
+  HAF_POSTGRES_URL: postgresql://hive@haf-instance:5432/haf_block_log
 
 include:
   - project: 'hive/haf'
@@ -16,10 +20,6 @@ include:
 prepare_haf_image:
   extends: .prepare_haf_data_5m_image
   stage: build_and_test
-  artifacts:
-    paths:
-      - haf_docked_image.txt
-    expire_in: 6 hours
 
   tags:
     - public-runner-docker
@@ -28,8 +28,11 @@ prepare_haf_image:
 prepare_hafah_image:
   extends: .docker_image_builder_job
   stage: build_and_test
+
   script:
-  -  docker build --target=HafAH -t registry.gitlab.syncad.com/hive/hafah/hafah:$CI_COMMIT_SHORT_SHA -f Dockerfile . 
+    - docker build --build-arg HTTP_PORT=$HAFAH_PORT --build-arg POSTGRES_URL="$HAF_POSTGRES_URL" --target=instance -t $HAFAH_IMAGE -f Dockerfile . 
+    - echo $HAFAH_CI_IMG_BUILDER_PASSWORD | docker login -u $HAFAH_CI_IMG_BUILDER_USER $REGISTRY --password-stdin
+    - docker push $HAFAH_IMAGE
   tags:
     - public-runner-docker
     - hived-for-tests
@@ -37,31 +40,74 @@ prepare_hafah_image:
 patterns_tests:
   extends: .docker_image_builder_job
   stage: build_and_test
+  variables:
+    AH_ENDPOINT: hafah_app:$HAFAH_PORT
+    FF_NETWORK_PER_BUILD: 1
+    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/test_tools/package"
 
   needs:
+    - job: prepare_hafah_image
     - job: prepare_haf_image
       artifacts: true
-    - job: prepare_hafah_image
-  image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
-  variables:
-    HIVE_BUILD_ROOT_PATH: "$CI_PROJECT_DIR/hived/build/hive"
-    BLOCK_LOG_PATH: "/blockchain/block_log"
-    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/test_tools/package"
+
+  services:
+    - name: $HAF_IMAGE_NAME
+      alias: haf-instance
+
+    - name: $HAFAH_IMAGE
+      alias: hafah_app
+
+  before_script:
+    - apk update && apk add bash git ca-certificates curl build-base python3-dev
+    - python3 -m ensurepip
+    - pip3 install tox
+
   script:
     - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt
-
-    # run HAfAH
-    - if [ ! "$AH_ENDPOINT" ]; then
-        cd $CI_PROJECT_DIR ;
-        export DEBUG=1 ;
-        ./main.py --psql-db-path $POSTGRESQL_URI --port 6543 2>&1 >> ah.log &
-        export AH_ENDPOINT=localhost:6543 ;
-      fi
-
     # run pattern tests
     - cd $CI_PROJECT_DIR/haf/hive/tests/api_tests/pattern_tests
     - ./run_tests.sh $AH_ENDPOINT `git rev-parse --show-toplevel`
 
+  artifacts:
+    when: always
+    reports:
+      junit: $CI_PROJECT_DIR/haf/hive/tests/api_tests/results.xml
+    paths:
+    - "$CI_JOB_NAME"
+    - "**/from_node.log"
+    - "**/ah.log"
+    - "**/*.out.json"
+    - "$CI_PROJECT_DIR/haf/hive/tests/tests_api/hived/workdir_*"
+    when: always
+    expire_in: 6 hours
+  tags:
+    - public-runner-docker
+    - hived-for-tests
+
+comparison_tests:
+  extends: .docker_image_builder_job
+  stage: build_and_test
+  variables:
+    AH_ENDPOINT: hafah_app:$HAFAH_PORT
+
+  needs:
+    - job: prepare_hafah_image
+    - job: prepare_haf_image
+      artifacts: true
+
+  services:
+    - name: $HAF_IMAGE_NAME
+      alias: haf-instance
+
+    - name: $HAFAH_IMAGE
+      alias: hafah_app
+
+  before_script:
+    - apk update && apk add bash git ca-certificates curl build-base python3-dev
+    - python3 -m ensurepip
+    - pip3 install tox
+
+  script:
     # run comparsion tests
     - export AHRB_PORT=$(cat $CI_PROJECT_DIR/tests/prepare_database/config.ini | grep webserver-http-endpoint | cut -d ':' -f 2)
     - pushd $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests
