--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,37 +8,37 @@ variables:
   BUILDER_IMAGE_TAG: "@sha256:a701abca3cdd31bc3a5c7e58a8a2a9ea752e7f30e100aa41bcfe9c56b777883f"
   SETUP_SCRIPTS_PATH: "$CI_PROJECT_DIR/haf/scripts"
 
-hive_fork_manager:
-  stage: build_and_test
-  image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
-  script:
-    - $SETUP_SCRIPTS_PATH/build.sh --cmake-arg="-DHIVE_LINT=ON" --haf-source-dir="$CI_PROJECT_DIR/haf" --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build" extension.hive_fork_manager
-    - sudo $SETUP_SCRIPTS_PATH/setup_postgres.sh --haf-admin-account=haf_admin --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build"
-    - cd "$CI_PROJECT_DIR/$CI_JOB_NAME/build" && ctest --output-on-failure  -R test.functional.hive_fork_manager.*
-  artifacts:
-    paths:
-    - "$CI_JOB_NAME"
-    expire_in: 6 hours
-  tags:
-    - public-runner-docker
+# hive_fork_manager:
+#   stage: build_and_test
+#   image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
+#   script:
+#     - $SETUP_SCRIPTS_PATH/build.sh --cmake-arg="-DHIVE_LINT=ON" --haf-source-dir="$CI_PROJECT_DIR/haf" --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build" extension.hive_fork_manager
+#     - sudo $SETUP_SCRIPTS_PATH/setup_postgres.sh --haf-admin-account=haf_admin --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build"
+#     - cd "$CI_PROJECT_DIR/$CI_JOB_NAME/build" && ctest --output-on-failure  -R test.functional.hive_fork_manager.*
+#   artifacts:
+#     paths:
+#     - "$CI_JOB_NAME"
+#     expire_in: 6 hours
+#   tags:
+#     - public-runner-docker
 
 # job resonsible for hived build in mainnet config.
-hived:
-  stage: build_and_test
-  image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
-  script:
-    - $SETUP_SCRIPTS_PATH/build.sh --cmake-arg="-DHIVE_LINT=ON" --haf-source-dir="$CI_PROJECT_DIR/haf" --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build" hived truncate_block_log
-    # check if sql_serializer compiles with hived
-    - test -f "$CI_PROJECT_DIR/$CI_JOB_NAME/build/hive/libraries/plugins/sql_serializer/libsql_serializer_plugin.a"
-    # check if sql_serializer plugin is included in hived plugins
-    - cd "$CI_PROJECT_DIR/$CI_JOB_NAME/build/hive/programs/hived"
-    - ./hived --help | grep psql-url
-  artifacts:
-    paths:
-    - "$CI_JOB_NAME"
-    expire_in: 6 hours
-  tags:
-    - public-runner-docker
+# hived:
+#   stage: build_and_test
+#   image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
+#   script:
+#     - $SETUP_SCRIPTS_PATH/build.sh --cmake-arg="-DHIVE_LINT=ON" --haf-source-dir="$CI_PROJECT_DIR/haf" --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build" hived truncate_block_log
+#     # check if sql_serializer compiles with hived
+#     - test -f "$CI_PROJECT_DIR/$CI_JOB_NAME/build/hive/libraries/plugins/sql_serializer/libsql_serializer_plugin.a"
+#     # check if sql_serializer plugin is included in hived plugins
+#     - cd "$CI_PROJECT_DIR/$CI_JOB_NAME/build/hive/programs/hived"
+#     - ./hived --help | grep psql-url
+#   artifacts:
+#     paths:
+#     - "$CI_JOB_NAME"
+#     expire_in: 6 hours
+#   tags:
+#     - public-runner-docker
 
 patterns_tests:
   stage: build_and_test
@@ -55,7 +55,7 @@ patterns_tests:
     - pip3 install -r requirements.txt
     - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt
     - pushd $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests
-    - pytest -n 8 --ref localhost:8090 --test http://localhost:8095 --junitxml=$CI_PROJECT_DIR/comparsion_tests.xml
+    - python3 -m pytest -n 8 --ref localhost:8090 --test http://localhost:8095 --junitxml=$CI_PROJECT_DIR/comparsion_tests.xml
     - popd
 
     # install hive_fork_manager extension built in previous stage
