--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,8 +52,16 @@ patterns_tests:
     HIVE_BUILD_ROOT_PATH: "$CI_PROJECT_DIR/hived/build/hive"
     BLOCK_LOG_PATH: "/blockchain/block_log"
   script:
+    # install required packages
     - pip3 install -r requirements.txt
     - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt
+
+    # setup test_tools
+    - pushd $CI_PROJECT_DIR/haf/hive/tests/test_tools
+    - sudo pip3 install -e .
+    - popd
+
+    # run tests
     - pushd $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests
     - python3 -m pytest -n 8 --ref localhost:8090 --test http://localhost:8095 --junitxml=$CI_PROJECT_DIR/comparsion_tests.xml
     - popd
