--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,12 +76,12 @@ patterns_tests:
         export AH_ENDPOINT=localhost:6543 ;
 
         # run postgREST version instance
-        ./run.sh re-start
+        ./run.sh re-start ;
       fi
 
     # run pattern tests
-    - cd $CI_PROJECT_DIR ;
-    ./run.sh test-patterns 6543 3000
+    - cd $CI_PROJECT_DIR
+    - ./run.sh test-patterns 6543 3000
 
     # run comparsion tests
     - export AHRB_PORT=$(cat $CI_PROJECT_DIR/tests/prepare_database/config.ini | grep webserver-http-endpoint | cut -d ':' -f 2)
