--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,6 +109,9 @@ comparison_tests:
   stage: build_and_test
   variables:
     AH_ENDPOINT: hafah_app:$HAFAH_PORT
+    HIVED_ENDPOINT: hived-instance:8090
+    FF_NETWORK_PER_BUILD: 1
+    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/test_tools/package"
 
   needs:
     - job: prepare_hafah_image
@@ -124,28 +127,26 @@ comparison_tests:
     - name: $HAFAH_IMAGE
       alias: hafah_app
 
+    - name: $HIVED_IMAGE_NAME
+      alias: hived-instance
+
   before_script:
     - apk update && apk add bash git ca-certificates curl build-base python3-dev
     - python3 -m ensurepip
     - pip3 install tox
 
   script:
-    # run comparsion tests
-    - export AHRB_PORT=$(cat $CI_PROJECT_DIR/tests/prepare_database/config.ini | grep webserver-http-endpoint | cut -d ':' -f 2)
-    - pushd $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests
-    - python3 -m pytest -n 8 --ref http://localhost:$AHRB_PORT --test http://$AH_ENDPOINT --start 4900000 --stop 4915000 --junitxml=$CI_PROJECT_DIR/comparsion_tests.xml
-    - popd
-
-    # kill hived and HAfAH
-    - pkill hived
-    - pkill main.py
+    - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt "$CI_PROJECT_DIR/haf/hive/tests/test_tools"
+      # run comparsion tests
+    - cd $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests
+    - python3 -m pytest -n 8 --ref http://$HIVED_ENDPOINT --test http://$AH_ENDPOINT --start 4900000 --stop 4915000 --junitxml=$CI_PROJECT_DIR/comparsion_tests.xml
 
   artifacts:
     when: always
     reports:
       junit:
         - $CI_PROJECT_DIR/comparsion_tests.xml
-        - $CI_PROJECT_DIR/haf/hive/tests/api_tests/results.xml
+
     paths:
     - "$CI_JOB_NAME"
     - "**/from_node.log"
